--- a/Party Rock/Base.lproj/Main.storyboard
+++ b/Party Rock/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                                 <rect key="frame" x="0.0" y="337" width="600" height="263"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="Q1m-4Y-taR">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PartyCell" rowHeight="93" id="Q1m-4Y-taR" customClass="PartyCell" customModule="Party_Rock" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="93"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q1m-4Y-taR" id="Fak-Aa-qcb">
@@ -69,41 +69,37 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="partybanner" translatesAutoresizingMaskIntoConstraints="NO" id="g0i-CW-drZ">
-                                                    <rect key="frame" x="8" y="8" width="76" height="76"/>
+                                                    <rect key="frame" x="28" y="8" width="150" height="75"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="76" id="9z2-sJ-dXB"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="75" id="aip-YQ-Yad"/>
+                                                        <constraint firstAttribute="height" constant="75" id="fer-T8-pcB"/>
+                                                        <constraint firstAttribute="width" constant="150" id="sgc-of-XUS"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Here..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZx-za-9gq">
-                                                    <rect key="frame" x="92" y="8" width="97" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="KKc-wj-7i1"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zoy-u3-nNo">
-                                                    <rect key="frame" x="92" y="35" width="42" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="zB7-1e-Lx1"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="198" y="8" width="374" height="25"/>
+                                                    <fontDescription key="fontDescription" name="IowanOldStyle-Roman" family="Iowan Old Style" pointSize="21"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="leading" secondItem="Fak-Aa-qcb" secondAttribute="leadingMargin" id="2lp-Ha-zoa"/>
-                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="top" secondItem="Fak-Aa-qcb" secondAttribute="topMargin" id="9dQ-fz-Wky"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="g0i-CW-drZ" secondAttribute="bottom" id="Jdb-wu-IHV"/>
-                                                <constraint firstItem="oZx-za-9gq" firstAttribute="top" secondItem="Fak-Aa-qcb" secondAttribute="topMargin" id="R1r-cN-1gb"/>
-                                                <constraint firstItem="Zoy-u3-nNo" firstAttribute="leading" secondItem="g0i-CW-drZ" secondAttribute="trailing" constant="8" id="Swp-N6-j0o"/>
-                                                <constraint firstItem="oZx-za-9gq" firstAttribute="leading" secondItem="g0i-CW-drZ" secondAttribute="trailing" constant="8" id="Y7I-26-s7B"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Zoy-u3-nNo" secondAttribute="bottom" constant="28" id="ZB3-sp-Gqc"/>
-                                                <constraint firstItem="Zoy-u3-nNo" firstAttribute="top" secondItem="oZx-za-9gq" secondAttribute="bottom" constant="6" id="r3K-IA-UFK"/>
+                                                <constraint firstItem="oZx-za-9gq" firstAttribute="top" secondItem="Fak-Aa-qcb" secondAttribute="topMargin" id="2sM-3d-Pyq"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="top" secondItem="Fak-Aa-qcb" secondAttribute="topMargin" id="4HO-1b-fVL"/>
+                                                <constraint firstItem="oZx-za-9gq" firstAttribute="leading" secondItem="g0i-CW-drZ" secondAttribute="trailing" constant="20" id="8sX-8a-43C"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="oZx-za-9gq" secondAttribute="trailing" constant="20" id="CVo-qE-AS0"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="bottom" secondItem="Fak-Aa-qcb" secondAttribute="bottomMargin" id="MmX-t4-N57"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="top" secondItem="Fak-Aa-qcb" secondAttribute="topMargin" id="TCW-PX-kWF"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="leading" secondItem="Fak-Aa-qcb" secondAttribute="leadingMargin" constant="20" id="baH-GN-rNk"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="leading" secondItem="Fak-Aa-qcb" secondAttribute="leadingMargin" constant="20" id="c4r-t4-wls"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="oZx-za-9gq" secondAttribute="bottom" constant="50" id="klW-17-673"/>
+                                                <constraint firstItem="g0i-CW-drZ" firstAttribute="bottom" secondItem="Fak-Aa-qcb" secondAttribute="bottomMargin" id="qcH-Gu-Ite"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="videoPreviewImage" destination="g0i-CW-drZ" id="gMD-ZF-bxE"/>
+                                            <outlet property="videoTitle" destination="oZx-za-9gq" id="YHF-gU-ENT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -137,15 +133,19 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="EGK-M1-AlG" id="u7D-W9-H8F"/>
+                        <segue destination="Hjr-SV-qlC" kind="show" identifier="VideoVC" id="Qt3-f1-Gly"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="139" y="136"/>
         </scene>
-        <!--View Controller-->
+        <!--VideoVC-->
         <scene sceneID="yi4-h6-jXZ">
             <objects>
-                <viewController id="Hjr-SV-qlC" sceneMemberID="viewController">
+                <viewController id="Hjr-SV-qlC" customClass="VideoVC" customModule="Party_Rock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5k4-8D-31p"/>
                         <viewControllerLayoutGuide type="bottom" id="C6n-2T-mg5"/>
@@ -153,12 +153,42 @@
                     <view key="view" contentMode="scaleToFill" id="dUR-r1-8Bl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2R-Li-XQW">
+                                <rect key="frame" x="0.0" y="20" width="600" height="450"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="450" id="Uqw-UH-rm3"/>
+                                </constraints>
+                            </webView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zE1-Ja-Sx8">
+                                <rect key="frame" x="40" y="478" width="520" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="C0r-j5-ids"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="IowanOldStyle-Roman" family="Iowan Old Style" pointSize="27"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="top" secondItem="a2R-Li-XQW" secondAttribute="bottom" constant="8" id="93Q-tx-q4Z"/>
+                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leadingMargin" constant="20" id="H6h-ky-gUj"/>
+                            <constraint firstAttribute="trailing" secondItem="a2R-Li-XQW" secondAttribute="trailing" id="LVH-we-QjL"/>
+                            <constraint firstItem="a2R-Li-XQW" firstAttribute="top" secondItem="5k4-8D-31p" secondAttribute="bottom" id="kdD-gm-72E"/>
+                            <constraint firstItem="a2R-Li-XQW" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leading" id="lLg-z5-nKp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zE1-Ja-Sx8" secondAttribute="trailing" constant="20" id="osP-yK-mp4"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="titleLable" destination="zE1-Ja-Sx8" id="Hqx-dn-gyD"/>
+                        <outlet property="webView" destination="a2R-Li-XQW" id="RD9-v8-Jg1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TJ9-A6-jjX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="770" y="136"/>
+            <point key="canvasLocation" x="885" y="136"/>
         </scene>
     </scenes>
     <resources>
