--- a/Party Rock/Base.lproj/Main.storyboard
+++ b/Party Rock/Base.lproj/Main.storyboard
@@ -155,16 +155,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2R-Li-XQW">
-                                <rect key="frame" x="0.0" y="20" width="600" height="450"/>
+                                <rect key="frame" x="20" y="40" width="560" height="450"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="450" id="Uqw-UH-rm3"/>
+                                    <constraint firstAttribute="height" constant="450" id="80U-EI-3Fd"/>
                                 </constraints>
                             </webView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zE1-Ja-Sx8">
-                                <rect key="frame" x="40" y="478" width="520" height="40"/>
+                                <rect key="frame" x="20" y="498" width="560" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="C0r-j5-ids"/>
+                                    <constraint firstAttribute="height" constant="40" id="U8w-7X-ai9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="IowanOldStyle-Roman" family="Iowan Old Style" pointSize="27"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -173,12 +173,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="top" secondItem="a2R-Li-XQW" secondAttribute="bottom" constant="8" id="93Q-tx-q4Z"/>
-                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leadingMargin" constant="20" id="H6h-ky-gUj"/>
-                            <constraint firstAttribute="trailing" secondItem="a2R-Li-XQW" secondAttribute="trailing" id="LVH-we-QjL"/>
-                            <constraint firstItem="a2R-Li-XQW" firstAttribute="top" secondItem="5k4-8D-31p" secondAttribute="bottom" id="kdD-gm-72E"/>
-                            <constraint firstItem="a2R-Li-XQW" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leading" id="lLg-z5-nKp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="zE1-Ja-Sx8" secondAttribute="trailing" constant="20" id="osP-yK-mp4"/>
+                            <constraint firstItem="a2R-Li-XQW" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leading" constant="20" id="0kG-4S-0dJ"/>
+                            <constraint firstAttribute="trailing" secondItem="a2R-Li-XQW" secondAttribute="trailing" constant="20" id="Et4-0O-3od"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zE1-Ja-Sx8" secondAttribute="trailing" id="SI7-A2-GAx"/>
+                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="leading" secondItem="dUR-r1-8Bl" secondAttribute="leadingMargin" id="XTJ-Iz-msk"/>
+                            <constraint firstItem="zE1-Ja-Sx8" firstAttribute="top" secondItem="a2R-Li-XQW" secondAttribute="bottom" constant="8" id="v2V-iZ-8QU"/>
+                            <constraint firstItem="a2R-Li-XQW" firstAttribute="top" secondItem="5k4-8D-31p" secondAttribute="bottom" constant="20" id="zJS-ym-TaK"/>
                         </constraints>
                     </view>
                     <connections>
